Fix date alignment in guest screen

--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,7 @@ body,html {
 
 #date {
 	font-size: 2em;
-	margin-left: 15%;
-	margin-right: 20%;
+	text-align: center;
 }
 
 .center-horiz {
